--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -22,6 +22,13 @@ jobs:
      displayName: 'Run a multi-line script'
 
 - job: Job2
+  dependsOn: Job1
   steps:
    - script: echo Hello, this is job2!
-     displayName: 'Run a one-line script for job2'        
+     displayName: 'Run a one-line script for job2'  
+
+- job: Job3
+  dependsOn: Job2
+  steps:
+   - script: echo Hello, this is job3!
+     displayName: 'Run a one-line script for job3'     
