--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -15,29 +15,36 @@ stages:
   - job: FirstJob 
     steps:
     - bash: echo Build first job 
+    - bash: echo $(PipelineLevelVariable)
   - job: secondJob 
     steps:
     - bash: echo Build second job 
 - stage: DevDeploy
+  variables: 
+   environment: Dev Envt 
   dependsOn: Build
   jobs:
   - job: DevDeployJob 
     steps:
-    - bash: echo DevDeploy Job 
+    - bash: echo $(environment) Job 
 - stage: QADeply
+  variables: 
+   environment: QA Envt 
   dependsOn: Build
 
   jobs:
   - job: QADeployJob 
     steps:
-    - bash: echo QADeploy Job 
+    - bash: echo $(environment) Job 
 - stage: ProdDeply
+  variables: 
+   environment: Prod Envt
   dependsOn:
   - QADeply
   - DevDeploy
   jobs:
   - job: ProdDeployJob 
     steps:
-    - bash: echo ProdDeploy Job 
+    - bash: echo $(environment) Job 
 
 
