--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -16,35 +16,42 @@ stages:
     steps:
     - bash: echo Build first job 
     - bash: echo $(PipelineLevelVariable)
-  - job: secondJob 
-    steps:
-    - bash: echo Build second job 
-- stage: DevDeploy
-  variables: 
-   environment: Dev Envt 
-  dependsOn: Build
-  jobs:
-  - job: DevDeployJob 
-    steps:
-    - bash: echo $(environment) Job 
-- stage: QADeply
-  variables: 
-   environment: QA Envt 
-  dependsOn: Build
+    - bash: echo $(Build.BuildNumber)
+    - bash: echo $(Build.BuildId)
+    - bash: echo $(Build.SourceBranchName)
+    - bash: echo $(Build.SourcesDirectory)
+    - bash: echo $(System.DefaultWorkingDirectory)
+    - bash: ls -R $(System.DefaultWorkingDirectory)
+    - bash: echo $(Build.ArtifactStagingDirectory)
+  # - job: secondJob 
+  #   steps:
+  #   - bash: echo Build second job 
+# - stage: DevDeploy
+#   variables: 
+#    environment: Dev Envt 
+#   dependsOn: Build
+#   jobs:
+#   - job: DevDeployJob 
+#     steps:
+#     - bash: echo $(environment) Job 
+# - stage: QADeply
+#   variables: 
+#    environment: QA Envt 
+#   dependsOn: Build
 
-  jobs:
-  - job: QADeployJob 
-    steps:
-    - bash: echo $(environment) Job 
-- stage: ProdDeply
-  variables: 
-   environment: Prod Envt
-  dependsOn:
-  - QADeply
-  - DevDeploy
-  jobs:
-  - job: ProdDeployJob 
-    steps:
-    - bash: echo $(environment) Job 
+#   jobs:
+#   - job: QADeployJob 
+#     steps:
+#     - bash: echo $(environment) Job 
+# - stage: ProdDeply
+#   variables: 
+#    environment: Prod Envt
+#   dependsOn:
+#   - QADeply
+#   - DevDeploy
+#   jobs:
+#   - job: ProdDeployJob 
+#     steps:
+#     - bash: echo $(environment) Job 
 
 
