--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -36,7 +36,13 @@ stages:
           **/*.tf
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - bash: ls -R $(Build.ArtifactStagingDirectory)    
-     
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
+
   # - job: secondJob 
   #   steps:
   #   - bash: echo Build second job 
