Playing with strategy for multi platform

--- a/03-playing-with-envt-depl.yml
+++ b/03-playing-with-envt-depl.yml
@@ -17,7 +17,7 @@ pool:
   vmImage: $(operatingSystem)
 
 steps:
-- script: Running on $(operatingSystem)
+- script: echo Running on $(operatingSystem)
   displayName: 'Run a one-line script'
 
 - script: |
